--- a/frontend/src/screens/PromoSection.css
+++ b/frontend/src/screens/PromoSection.css
@@ -16,28 +16,37 @@
   padding-top: 100px;
 }
 
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+}
+
 .carousel .carousel-inner .item-1 {
-  background-image: url("../assets/images/hero/hero-1.jpg");
+  background-image: url("../assets/images/hero/hero-1.jpeg");
   background-size: cover;
 }
 
 .carousel .carousel-inner .item-2 {
-  background-image: url("../assets/images/hero/hero-2.jpg");
+  background-image: url("../assets/images/hero/hero-2.jpeg");
   background-size: cover;
 }
-
 .carousel .carousel-inner .item-3 {
-  background-image: url("../assets/images/hero/hero-3.jpg");
+  background-image: url("../assets/images/hero/hero-3.jpeg");
   background-size: cover;
 }
 
 .carousel .carousel-inner .item-4 {
-  background-image: url("../assets/images/hero/hero-4.jpg");
+  background-image: url("../assets/images/hero/hero-4.jpeg");
   background-size: cover;
 }
 
 .carousel .carousel-inner .item-5 {
-  background-image: url("../assets/images/hero/hero-5.jpg");
+  background-image: url("../assets/images/hero/hero-5.jpeg");
   background-size: cover;
 }
 
